--- a/style.scss
+++ b/style.scss
@@ -27,10 +27,14 @@ nav {
         text-decoration: none;
         padding: 1em;
         height: 1em;
-        border-bottom: 3px solid #98dbc6;
+        // border-bottom: 3px solid ;
         &#home{
             background-color: $primary-color;
             color: $primary-font-color;
+            border-top: 2px solid #e6d72a;
+            border-bottom: 2px solid #e6d72a;
+            border-left: 2px solid #e6d72a;
+            border-right: 2px solid #e6d72a;
         }
         &:hover{
             padding: 1em 1.5em;
@@ -41,15 +45,27 @@ nav {
         &#about{
             background-color: $secondary-color;
             color: $primary-font-color;
+            border-top: 2px solid #98dbc6;
+            border-bottom: 2px solid #98dbc6;
+            border-left: 2px solid #98dbc6;
+            border-right: 2px solid #98dbc6;
            
         }
         &#portfolio{
             background-color: $primary-color;
             color: $primary-font-color;
+            border-top: 2px solid #e6d72a;
+            border-bottom: 2px solid #e6d72a;
+            border-left: 2px solid #e6d72a;
+            border-right: 2px solid #e6d72a;
         }
         &#blog{
             background-color: $secondary-color;
             color: $primary-font-color;
+            border-top: 2px solid #98dbc6;
+            border-bottom: 2px solid #98dbc6;
+            border-left: 2px solid #98dbc6;
+            border-right: 2px solid #98dbc6;
         }
     }
 
@@ -58,19 +74,25 @@ nav {
 main{
     height: 400px;
     grid-area: main;
-    background-image: url("images/Developer.png");
+    background-image: url("images/developerr.png");
     background-repeat: no-repeat;
     background-position: center;
-    // &:hover{
-    // background-image: url("images/logo.png");
-    // }
+    &:hover{
+    background-image: url("images/flipdeveloper.png");
+    }
 
     #socials{
         margin-top: 30px;
         display: flex;
         justify-content: center;
-        border-radius: 50%;
-        background-color: $primary-color;
+       &:hover{
+        transform: scale(1.5);
+        
+        
+       }
+
+        // border-radius: 50%;
+        // background-color: $primary-color;
     }
 }
 
@@ -83,5 +105,41 @@ footer {
     img {
         height: 50px;
         border-radius: 50%;
+        &:hover{
+        -webkit-animation-name: shake;
+        animation-name: shake;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
+        }
+        @-webkit-keyframes shake {
+            0%, 100% {
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+            }
+            10%, 30%, 50%, 70%, 90% {
+            -webkit-transform: translate3d(-10px, 0, 0);
+            transform: translate3d(-10px, 0, 0);
+            }
+            20%, 40%, 60%, 80% {
+            -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+            }
+            }
+            @keyframes shake {
+            0%, 100% {
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+            }
+            10%, 30%, 50%, 70%, 90% {
+            -webkit-transform: translate3d(-10px, 0, 0);
+            transform: translate3d(-10px, 0, 0);
+            }
+            20%, 40%, 60%, 80% {
+            -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+            }
+            } 
     }
 }
