--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:500,400,300italic,300,400italic,100,100italic);
 #content {
+  background-color: white;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 15% 15% 55% 15%;
-      grid-template-rows: 15% 15% 55% 15%;
+  -ms-grid-rows: 9% 11% 40% 40%;
+      grid-template-rows: 9% 11% 40% 40%;
       grid-template-areas: "header" "nav" "main" "footer";
 }
 
@@ -12,102 +14,10 @@ header {
   grid-area: header;
 }
 
-nav {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: nav;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-nav a {
-  text-decoration: none;
-  padding: 1em;
-  height: 1em;
-}
-
-nav a#home {
-  background-color: #5bc8ac;
-  color: black;
-  border-top: 2px solid #e6d72a;
-  border-bottom: 2px solid #e6d72a;
-  border-left: 2px solid #e6d72a;
-  border-right: 2px solid #e6d72a;
-}
-
-nav a:hover {
-  padding: 1em 1.5em;
-  border-radius: 50%;
-  font-size: larger;
-}
-
-nav a#about {
-  background-color: #e6d72a;
-  color: black;
-  border-top: 2px solid #98dbc6;
-  border-bottom: 2px solid #98dbc6;
-  border-left: 2px solid #98dbc6;
-  border-right: 2px solid #98dbc6;
-}
-
-nav a#portfolio {
-  background-color: #5bc8ac;
-  color: black;
-  border-top: 2px solid #e6d72a;
-  border-bottom: 2px solid #e6d72a;
-  border-left: 2px solid #e6d72a;
-  border-right: 2px solid #e6d72a;
-}
-
-nav a#blog {
-  background-color: #e6d72a;
-  color: black;
-  border-top: 2px solid #98dbc6;
-  border-bottom: 2px solid #98dbc6;
-  border-left: 2px solid #98dbc6;
-  border-right: 2px solid #98dbc6;
-}
-
-main {
-  height: 400px;
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  grid-area: main;
-  background-image: url("images/developerr.png");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-main:hover {
-  background-image: url("images/flipdeveloper.png");
-}
-
-main #socials {
-  margin-top: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-main #socials:hover {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
-}
-
-footer {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
-  grid-area: footer;
-}
-
 #logo img {
-  height: 50px;
+  height: 80px;
+  position: relative;
+  margin: 10px 15px 15px 10px;
   border-radius: 50%;
 }
 
@@ -148,5 +58,481 @@ footer {
     -webkit-transform: translate3d(10px, 0, 0);
     transform: translate3d(10px, 0, 0);
   }
+}
+
+nav {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: nav;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 1em;
+  height: 1em;
+}
+
+nav a#home {
+  background-color: #5bc8ac;
+  color: black;
+  border-top: 2px solid #e6d72a;
+  border-bottom: 2px solid #e6d72a;
+  border-left: 2px solid #e6d72a;
+  border-right: 2px solid #e6d72a;
+}
+
+nav a:hover {
+  padding: 1em 1.5em;
+  border-radius: 50%;
+  font-size: larger;
+}
+
+nav a#portfolio {
+  background-color: #e6d72a;
+  color: black;
+  border-top: 2px solid #98dbc6;
+  border-bottom: 2px solid #98dbc6;
+  border-left: 2px solid #98dbc6;
+  border-right: 2px solid #98dbc6;
+}
+
+nav a#blog {
+  background-color: #5bc8ac;
+  color: black;
+  border-top: 2px solid #e6d72a;
+  border-bottom: 2px solid #e6d72a;
+  border-left: 2px solid #e6d72a;
+  border-right: 2px solid #e6d72a;
+}
+
+nav a#about {
+  background-color: #e6d72a;
+  color: black;
+  border-top: 2px solid #98dbc6;
+  border-bottom: 2px solid #98dbc6;
+  border-left: 2px solid #98dbc6;
+  border-right: 2px solid #98dbc6;
+}
+
+main {
+  height: 400px;
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: main;
+  background-image: url("images/developerr.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+main:hover {
+  background-image: url("images/flipdeveloper.png");
+}
+
+#socials {
+  height: 250px;
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#socials:hover {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  cursor: pointer;
+}
+
+.cards img {
+  display: -ms-grid;
+  display: grid;
+  width: 300px;
+  height: 100px;
+  overflow: hidden;
+  margin-top: 50px;
+  border-radius: 15%;
+}
+
+.cards img:hover {
+  -webkit-box-shadow: 5px 10px;
+          box-shadow: 5px 10px;
+  border-color: #5bc8ac;
+}
+
+/*PEN STYLES*/
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.blog-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1rem auto;
+  -webkit-box-shadow: 0 3px 7px -1px rgba(91, 200, 172, 0.9);
+          box-shadow: 0 3px 7px -1px rgba(91, 200, 172, 0.9);
+  margin-bottom: 1.1%;
+  background: #fff;
+  line-height: 1.1;
+  font-family: sans-serif;
+  border-radius: 30px;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.blog-card a {
+  color: inherit;
+}
+
+.blog-card a:hover {
+  color: #5ad67d;
+}
+
+.blog-card:hover .photo {
+  -webkit-transform: scale(1.3) rotate(3deg);
+          transform: scale(1.3) rotate(3deg);
+}
+
+.blog-card .meta {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+}
+
+.blog-card .photo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
+}
+
+.blog-card .details,
+.blog-card .details ul {
+  margin: auto;
+  padding: 0;
+  list-style: none;
+}
+
+.blog-card .details {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  margin: auto;
+  -webkit-transition: left .2s;
+  transition: left .2s;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  font-size: .9rem;
+}
+
+.blog-card .details a {
+  -webkit-text-decoration: dotted underline;
+          text-decoration: dotted underline;
+}
+
+.blog-card .details ul li {
+  display: inline-block;
+}
+
+.blog-card .details .author:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f007";
+}
+
+.blog-card .details .date:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f133";
+}
+
+.blog-card .details .tags ul:before {
+  font-family: FontAwesome;
+  content: "\f02b";
+  margin-right: 10px;
+}
+
+.blog-card .details .tags li {
+  margin-right: 2px;
+}
+
+.blog-card .details .tags li:first-child {
+  margin-left: -4px;
+}
+
+.blog-card .description {
+  padding: 1rem;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+.blog-card .description h1,
+.blog-card .description h2 {
+  font-family: Poppins, sans-serif;
+}
+
+.blog-card .description h1 {
+  line-height: 1;
+  margin: 0;
+  font-size: 1.7rem;
+}
+
+.blog-card .description h2 {
+  font-size: 1rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #a2a2a2;
+  margin-top: 5px;
+}
+
+.blog-card .description .read-more {
+  text-align: right;
+}
+
+.blog-card .description .read-more a {
+  color: #5ad67d;
+  display: inline-block;
+  position: relative;
+}
+
+.blog-card .description .read-more a:after {
+  content: "\f061";
+  font-family: FontAwesome;
+  margin-left: -10px;
+  opacity: 0;
+  vertical-align: middle;
+  -webkit-transition: margin .3s, opacity .3s;
+  transition: margin .3s, opacity .3s;
+}
+
+.blog-card .description .read-more a:hover:after {
+  margin-left: 5px;
+  opacity: 1;
+}
+
+.blog-card p {
+  position: relative;
+  margin: 1rem 0 0;
+}
+
+.blog-card p:first-of-type {
+  margin-top: 1.25rem;
+}
+
+.blog-card p:first-of-type:before {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background: #5ad67d;
+  width: 35px;
+  top: -0.75rem;
+  border-radius: 3px;
+}
+
+.blog-card:hover .details {
+  left: 0%;
+}
+
+@media (min-width: 640px) {
+  .blog-card {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 700px;
+  }
+  .blog-card .meta {
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+    height: auto;
+  }
+  .blog-card .description {
+    -ms-flex-preferred-size: 60%;
+        flex-basis: 60%;
+  }
+  .blog-card .description:before {
+    -webkit-transform: skewX(-3deg);
+            transform: skewX(-3deg);
+    content: "";
+    background: #fff;
+    width: 30px;
+    position: absolute;
+    left: -10px;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  .blog-card.alt {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .blog-card.alt .description:before {
+    left: inherit;
+    right: -10px;
+    -webkit-transform: skew(3deg);
+            transform: skew(3deg);
+  }
+  .blog-card.alt .details {
+    padding-left: 25px;
+  }
+}
+
+#contactme {
+  margin: 0;
+  padding: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  font-family: 'Roboto', sans-serif;
+  color: #555;
+  background: #fff;
+}
+
+form {
+  width: 30%;
+  height: 100%;
+  background: #98dbc6;
+  margin: 5% 33%;
+  padding: 2%;
+  border-radius: 40px;
+  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  display: block;
+  margin-top: 2em;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 5px;
+}
+
+p {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+form input, textarea {
+  border-radius: 2px;
+  width: 90%;
+  display: block;
+  font-size: 16px;
+  font-weight: 300;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 10px;
+  border: 1px solid #eceff1;
+  padding: 15px;
+  z-index: 1;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #fff;
+  border: 1px solid #d9d9d9;
+  border-top: 1px solid #c0c0c0;
+}
+
+[type="submit"] {
+  border: 1px solid #2f5bb7;
+  color: #fff;
+  padding: 10px;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  background-color: #357ae8;
+  background-image: -webkit-linear-gradient(top, #5bc8ac, #5bc8ac);
+  margin-top: 12px;
+  font-weight: 500;
+}
+
+[type="submit"]:hover {
+  border-color: #c6c6c6;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  background-color: #4c8ffc;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#e6d72a), to(#e6d72a));
+  background-image: linear-gradient(top, #e6d72a, #e6d72a);
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.checkbox {
+  padding: 8px;
+  margin-top: 8px;
+  margin-left: -120px;
+}
+
+.human_veryfication {
+  float: left;
+  margin-left: 20px;
+  margin-top: 5px;
+}
+
+lable {
+  margin-left: -180px;
+}
+
+@media only screen and (max-width: 800px) {
+  form {
+    left: 3%;
+    margin-right: 3%;
+    width: 88%;
+    margin-left: 3%;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+}
+
+footer {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  grid-area: footer;
+  margin-bottom: 450px;
+  text-align: center;
+}
+
+footer p {
+  color: #5bc8ac;
 }
 /*# sourceMappingURL=style.css.map */
