--- a/style.scss
+++ b/style.scss
@@ -1,145 +1,10 @@
-$primary-color: #5bc8ac;
-$secondary-color: #e6d72a;
-$primary-font-color: black;
-$secondary-font-color: #800000;
-
-#content  {
-    display: grid;
-    grid-template-rows: 15% 15% 55% 15%;
-    grid-template-areas: 
-    "header"
-    "nav"
-    "main"
-    "footer";
-}
-
-header {
-    grid-area: header;
-}
-
-nav {
-    grid-area: nav;
-    display: flex;
-    justify-content: space-around;
-
-    a {
-        // width: 50px;
-        text-decoration: none;
-        padding: 1em;
-        height: 1em;
-        // border-bottom: 3px solid ;
-        &#home{
-            background-color: $primary-color;
-            color: $primary-font-color;
-            border-top: 2px solid #e6d72a;
-            border-bottom: 2px solid #e6d72a;
-            border-left: 2px solid #e6d72a;
-            border-right: 2px solid #e6d72a;
-        }
-        &:hover{
-            padding: 1em 1.5em;
-            border-radius:50%;
-            font-size: larger;
-                    
-        }
-        &#about{
-            background-color: $secondary-color;
-            color: $primary-font-color;
-            border-top: 2px solid #98dbc6;
-            border-bottom: 2px solid #98dbc6;
-            border-left: 2px solid #98dbc6;
-            border-right: 2px solid #98dbc6;
-           
-        }
-        &#portfolio{
-            background-color: $primary-color;
-            color: $primary-font-color;
-            border-top: 2px solid #e6d72a;
-            border-bottom: 2px solid #e6d72a;
-            border-left: 2px solid #e6d72a;
-            border-right: 2px solid #e6d72a;
-        }
-        &#blog{
-            background-color: $secondary-color;
-            color: $primary-font-color;
-            border-top: 2px solid #98dbc6;
-            border-bottom: 2px solid #98dbc6;
-            border-left: 2px solid #98dbc6;
-            border-right: 2px solid #98dbc6;
-        }
-    }
-
-}
-
-main{
-    height: 400px;
-    grid-area: main;
-    background-image: url("images/developerr.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    &:hover{
-    background-image: url("images/flipdeveloper.png");
-    }
-
-    #socials{
-        margin-top: 30px;
-        display: flex;
-        justify-content: center;
-       &:hover{
-        transform: scale(1.5);
-        
-        
-       }
-
-        // border-radius: 50%;
-        // background-color: $primary-color;
-    }
-}
+//these will include all scss file in main file// 
+@import "header.scss";
+@import "nav.scss";
+@import "main.scss";
+@import "footer.scss";
 
 
-footer {
-    grid-area: footer;
-}
 
-#logo{
-    img {
-        height: 50px;
-        border-radius: 50%;
-        &:hover{
-        -webkit-animation-name: shake;
-        animation-name: shake;
-        -webkit-animation-duration: 1s;
-        animation-duration: 1s;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both;
-        }
-        @-webkit-keyframes shake {
-            0%, 100% {
-            -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-            }
-            10%, 30%, 50%, 70%, 90% {
-            -webkit-transform: translate3d(-10px, 0, 0);
-            transform: translate3d(-10px, 0, 0);
-            }
-            20%, 40%, 60%, 80% {
-            -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-            }
-            }
-            @keyframes shake {
-            0%, 100% {
-            -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-            }
-            10%, 30%, 50%, 70%, 90% {
-            -webkit-transform: translate3d(-10px, 0, 0);
-            transform: translate3d(-10px, 0, 0);
-            }
-            20%, 40%, 60%, 80% {
-            -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-            }
-            } 
-    }
-}
+
+
