--- a/_footer.scss
+++ b/_footer.scss
@@ -2,7 +2,7 @@ $primary-color: #5bc8ac;
 $secondary-color: #e6d72a;
 $primary-font-color: black;
 $secondary-font-color: #800000;
-
+// styling footer //
 footer {
     grid-area: footer;
     margin-bottom: 450px;
