--- a/_nav.scss
+++ b/_nav.scss
@@ -2,19 +2,18 @@ $primary-color: #5bc8ac;
 $secondary-color: #e6d72a;
 $primary-font-color: black;
 $secondary-font-color: #800000;
-
+// styling for navigation bar //
 nav {
     grid-area: nav;
     display: flex;
     justify-content: space-around;
-
     a {
         // width: 50px;
         text-decoration: none;
         padding: 1em;
         height: 1em;
         // border-bottom: 3px solid ;
-        &#home{
+        &#home {
             background-color: $primary-color;
             color: $primary-font-color;
             border-top: 2px solid #e6d72a;
@@ -22,22 +21,20 @@ nav {
             border-left: 2px solid #e6d72a;
             border-right: 2px solid #e6d72a;
         }
-        &:hover{
+        &:hover {
             padding: 1em 1.5em;
-            border-radius:50%;
+            border-radius: 50%;
             font-size: larger;
-                    
         }
-        &#portfolio{
+        &#portfolio {
             background-color: $secondary-color;
             color: $primary-font-color;
             border-top: 2px solid #98dbc6;
             border-bottom: 2px solid #98dbc6;
             border-left: 2px solid #98dbc6;
             border-right: 2px solid #98dbc6;
-           
         }
-        &#blog{
+        &#blog {
             background-color: $primary-color;
             color: $primary-font-color;
             border-top: 2px solid #e6d72a;
@@ -45,7 +42,7 @@ nav {
             border-left: 2px solid #e6d72a;
             border-right: 2px solid #e6d72a;
         }
-        &#about{
+        &#about {
             background-color: $secondary-color;
             color: $primary-font-color;
             border-top: 2px solid #98dbc6;
@@ -54,5 +51,4 @@ nav {
             border-right: 2px solid #98dbc6;
         }
     }
-
 }
