--- a/_main.scss
+++ b/_main.scss
@@ -48,7 +48,7 @@ main {
     // margin: 10px;
     // border: 3px solid #000;
     // box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3); 
-    // max-width: 23vw;
+    max-width: 23vw;
     display: grid;
     width: 300px;
     height: 100px;
