--- a/_main.scss
+++ b/_main.scss
@@ -46,7 +46,7 @@ main {
 
 .cards img {
     // margin: 10px;
-    // border: 3px solid #000;
+    border: 3px solid #e6d72a;
     // box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3); 
     max-width: 23vw;
     display: grid;
@@ -56,7 +56,7 @@ main {
     margin-top: 50px;
     border-radius: 15%;
     &:hover {
-        box-shadow: 5px 10px;
+        box-shadow: 5px 10px #5bc8ac;
         border-color: $primary-color;
     }
 }
