--- a/_main.scss
+++ b/_main.scss
@@ -47,7 +47,7 @@ main {
 .cards img {
     // margin: 10px;
     border: 3px solid #e6d72a;
-    // box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3); 
+    // // box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3); 
     max-width: 23vw;
     display: grid;
     width: 300px;
@@ -56,7 +56,7 @@ main {
     margin-top: 50px;
     border-radius: 15%;
     &:hover {
-        box-shadow: 5px 10px #5bc8ac;
+        box-shadow: 5px 10px $primary-color;
         border-color: $primary-color;
     }
 }
