--- a/_main.scss
+++ b/_main.scss
@@ -46,8 +46,8 @@ main {
 
 .cards img {
     // margin: 10px;
-    border: 3px solid #e6d72a;
-    // // box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3); 
+    // border: 3px solid #e6d72a;
+    // // // box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3); 
     max-width: 23vw;
     display: grid;
     width: 300px;
