change link colors

--- a/_main.scss
+++ b/_main.scss
@@ -46,7 +46,7 @@ main {
 
 .cards img {
     // margin: 10px;
-    // border: 3px solid #e6d72a;
+    border: 3px solid #e6d72a;
     // // // box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.3); 
     max-width: 23vw;
     display: grid;
